[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/UbuntuTitleFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/ui_btn_bg_1.png" type="Texture" id=2]
[ext_resource path="res://scenes/DemoMenu.gd" type="Script" id=3]
[ext_resource path="res://popups/WoodPanelUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Title.png" type="Texture" id=11]
[ext_resource path="res://prefabs/Transition.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/sfx/ambient.mp3" type="AudioStream" id=15]
[ext_resource path="res://assets/font/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=17]

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 17 )

[node name="DemoMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -202, -322 )
script = ExtResource( 3 )

[node name="WoodPanelUi" parent="." instance=ExtResource( 9 )]

[node name="Title" type="TextureRect" parent="."]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
margin_top = 48.0
margin_bottom = 197.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 170.0
margin_bottom = -186.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 4 )
text = "DEMO VERSION"
align = 1
valign = 1
autowrap = true

[node name="Transition" parent="." instance=ExtResource( 13 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -4.0
autoplay = true

[node name="VBox" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -214.0
margin_top = 87.5
margin_right = 214.0
margin_bottom = 152.5

[node name="btn1" type="Button" parent="VBox"]
margin_right = 140.0
margin_bottom = 65.0
rect_min_size = Vector2( 140, 65 )
rect_pivot_offset = Vector2( 70, 33 )
focus_mode = 0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="BgButton1" type="TextureRect" parent="VBox/btn1"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="VBox/btn1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 3 )
text = "Start"
align = 1
valign = 1
autowrap = true

[node name="btn2" type="Button" parent="VBox"]
margin_left = 144.0
margin_right = 284.0
margin_bottom = 65.0
rect_min_size = Vector2( 140, 65 )
focus_mode = 0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="BgButton1" type="TextureRect" parent="VBox/btn2"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="VBox/btn2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 3 )
text = "ENGLISH"
align = 1
valign = 1
autowrap = true

[node name="btn3" type="Button" parent="VBox"]
margin_left = 288.0
margin_right = 428.0
margin_bottom = 65.0
rect_min_size = Vector2( 140, 65 )
focus_mode = 0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="BgButton1" type="TextureRect" parent="VBox/btn3"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="VBox/btn3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 3 )
text = "Salir"
align = 1
valign = 1
autowrap = true
